--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/bitcoin.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon64x64.ico">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css"></link>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
